# tercio-sangre-y-acero

./: .dockerignore  .env.local.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile.dokploy  README.md  docker-compose.dokploy.yml  docker-compose.local.yml  project.godot
DESIGN/: recursos-faltantes.md  recursos-faltantes.next.md
GPT-ASSETS/: asset_manifest.json  asset_pack_2026_06_21_ui_portraits_resources.json
backend/: Dockerfile  pyproject.toml
backend/src/tercio_backend/: app.py  config.py  data.py  http.py  schemas.py
backend/src/tercio_backend/routes/: __init__.py  catalog.py  health.py
backend/tests/: test_app.py  test_schemas.py
data/: asset_generation_manifest.json  assets.json  catalog.json  character-names.json  characters.json  enemies.json  events.json  items.json  loot_tables.json  missions.json  player-portraits.json  ranks.json  report_fragments.json  shops.json  stats.json  training.json  wounds.json
docs/: agent_rules.md  architecture.md  asset-generation-runbook.md  asset_gap_report.md  asset_pipeline_runbook.md  combat_canvas.md  comfyui_asset_pipeline.md  data_schema.md  database_dokploy.md  game_pillars.md  implementation_notes.md  local_flask_docker.md  model_downloads.md  roadmap.md  sprite_pipeline.md  story_mode.md  ui_design_system.md  vertical_slice.md
scripts/: audit_asset_links.py  build_asset_bank.py  build_player_portraits.mjs  check.mjs  comfyui_model_utils.py  download_civitai_models.py  generate_tercio_assets.py  print_model_plan.py  process_gpt_assets.py  rename_asset_stems.py  reorganize_gpt_assets.py  (+3 more)
(+465 files in other folders)
