[project]
name = "tercio-backend"
version = "0.1.0"
description = "Typed Flask backend for Tercio local migration tests."
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1,<4",
  "pydantic>=2.11,<3",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pyright>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnusedFunction = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
